--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,7 @@ jobs:
         run: scoop install autohotkey
         
       - name: Build and Run Tests
-        run: autohotkey.exe /ErrorStdOut tests/automatedTest.ahk
+        run: autohotkey.exe /ErrorStdOut https://raw.githubusercontent.com/xdeadboy666x/Xhamster-Gallery-Downloader/master/Xhamster%20Gallery%20Downloader%20v1.0%20(06-06-2015).ahk
         
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v2
